corrected list nowrap

--- a/css/list.css
+++ b/css/list.css
@@ -6,7 +6,7 @@
 
 .list__block {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   width: 100%;
   background-color: #ffffff;
   padding: 0px 20px;
